force-app/main/default/objects/Scanned_Document__c/Scanned_Document__c.object-meta.xml
<CustomObject>
    <label>Scanned Document</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Scanned Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scanned Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>