force-app/main/default/objects/Scanned_Document__c/fields/Account_test_lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_test_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account test lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scanned Documents (Account test lookup)</relationshipLabel>
    <relationshipName>Scanned_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>