force-app/main/default/objects/Scanned_Document__c/fields/Extracted_Text__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Text__c</fullName>
    <label>Extracted Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>