force-app/main/default/objects/Scanned_Document__c/fields/Extracted_Text_long__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Text_long__c</fullName>
    <label>Extracted Text Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>